@@ -42,7 +42,7 @@
   2ae06d7a2cc868e73b3a0c43a6c3973abd983cbf 2010090601 mingw32-libiconv.xml
   cd96b5759d4b1bc19c4e71c5c35980092659c2f8 2010092500 mingw32-libtool.xml
   0f5fd373c90d9acc6cd7f63120375707b81d4fb5 2011012200 mingw32-make.xml
-  068c1db0536da6c032fe926c2884d5734f5f51db 2011061700 mingw32-mingw-get.xml
+  052e69a091c126287d63261ac95d2891db5f1688 2011072900 mingw32-mingw-get.xml
   3dff337479c4ce7122fdfb0c194146fe2e47c74b 2010090600 mingw32-mingw-utils.xml
   397021010754b50cdbbe5d5003b1f6217158ec8e 2010083100 mingw32-mpc.xml
   c35e6513fa814743400729714413bd749ff148ef 2010083100 mingw32-mpfr.xml
