@@ -1,3 +1,10 @@
+2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Update for mingw-get-0.3-alpha-2.1 release.
+
+	* mingw32/mingw32-mingw-get.xml: Add release entries.
+	* mingw32/issue.log: Update accordingly.
+
 2011-07-11  Charles Wilson  <mingw@cwilson.fastmail.fm>
 
 	Update mingw32-pthreads; coordinate publication with gcc.
